# os_626

./: .gitignore  Cargo.toml  README.md
.cargo/: config
docs/: cpu_exceptions.md  double_faults.md  paging_implementation.md
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
tests/: basic_root.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
