[package]
name = "os_626"
version = "0.1.0"
authors = ["倪广野 <1542850280@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.0"
volatile = "0.2.3"
x86_64 = "0.12.1"
uart_16550 = "0.2.0"
# 引入自旋锁
spin = "0.4.9"
# 引入可编程中断控制器的操作库
pic8259_simple = "0.2.0"
pc-keyboard = "0.5.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# 使用`cargo build`编译时需要的配置
[profile.dev]
panic = "abort" # 禁用panic时栈展开

# 使用`cargo build --release`编译时需要的配置
[profile.release]
panic = "abort" # 禁用panic时栈展开

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33
test-timeout = 300          # (in seconds)

# 禁用stack_overflow测试模块中的Rust的集成测试环境
[[test]]
name = "stack_overflow"
harness = false
